# copyforward

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README.python.md  SESSION_SUMMARY.md  perf.data  perf.script
.github/workflows/: ci.yml  python-ci.yml
benches/: bench_copyforward.rs
scripts/: profile_capped.sh
src/: capped.rs  core.rs  fixture.rs  greedy.rs  hashed.rs  hashed_binary.rs  hashing.rs  instrumentation.rs  lib.rs  normalize.rs  python_bindings.rs  tokenization.rs
src/engine/: capped.rs
sweep_out/: cap128_ncap128.txt  cap128_ncap32.txt  cap128_ncap64.txt  cap32_ncap128.txt  cap32_ncap32.txt  cap32_ncap64.txt  cap64_ncap128.txt  cap64_ncap32.txt  cap64_ncap64.txt
tests/: capped_tests.rs  parameterized_tests.rs
