[package]
name = "copyforward"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.8.12"
pyo3 = { version = "0.20", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
smallvec = "1.15.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_copyforward"
harness = false
path = "benches/bench_copyforward.rs"
